# fantacy

./: .gitignore  README.md  pyproject.toml  setup.py
fantacy/: __init__.py
fantacy/fetcher/: __init__.py  fetcher.py  utils.py
fantasy/analyzer/: __init__.py  basic.py  overlap.py
fantasy/fetcher/: __init__.py  base.py  fetcher.py
