[tool.poetry]
name = "fantasy"
version = "0.1.0"
description = "A pandas-based technical analysis package for stock market."
authors = ["davidho27941 <davidho.prime@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.24.1"
pandas = "^1.5.2"
seaborn = "^0.12.2"
plotly = "5.11.0"
requests = "^2.28.1"
rich = "^13.0.0"
yarl = "^1.8.2"
lxml = "^4.9.2"
html5lib = "^1.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
